Fix all known contrast issues. Closes #340. (#382)
* Make the general background much darker so there's more colors to play with.

* Removing disabled toggles, we are not using it.

* Add enough contrast to the second footer.

* Add page to test UI elements.

* Improve accessibility of logo link.

* Correct logo focus background in dark mode.

* Make form narrow so it fits on a small mobile.

* Better contrast on toggle buttons.

Also clean up the implementation a lot.

* Make the initial state of the form the correct one.

* Make the search form fit on a small phone again.

* Screen reader friendly pagination links.

* Add headers to each row.

* Fix contrast for links in dark mode.

* Less contrast between rows in dark mode.

* Fix links' contrast in light mode.

* Fix contrast in badges.

* Explicit iteration to be able to get the index.

* Fix contrast for dropdown in dark mode.

* Fix contrast in secondary information in repeater search list.

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -19,7 +19,9 @@
 
 @layer components {
     .link {
-        @apply underline text-orange-600 hover:text-orange-800 dark:text-orange-600 dark:hover:text-orange-300;
+        @apply underline
+        text-orange-700 hover:text-orange-600
+        dark:text-orange-400 dark:hover:text-orange-500;
     }
 
     .button-base {
@@ -29,7 +31,8 @@
         font-semibold
         rounded-md
         outline-2 outline-offset-2
-        focus-within:outline;
+        focus-within:outline
+        cursor-pointer;
     }
 
     .button-base svg.svg-inline--fa {
@@ -38,26 +41,36 @@
 
     .button {
         @apply button-base
-        text-white bg-orange-500
-        outline-orange-600
-        dark:outline-orange-400
-        hover:bg-orange-600
-        dark:hover:bg-orange-400
-        focus:bg-orange-600
-        dark:focus:bg-orange-400;
+        text-white bg-orange-700
+        outline-orange-800 hover:bg-orange-800 focus-within:bg-orange-800
+        dark:text-gray-900 dark:bg-orange-400
+        dark:outline-orange-300 dark:hover:bg-orange-300 dark:focus-within:bg-orange-300;
     }
 
     .button-secondary {
         @apply button-base
-        bg-cyan-300 dark:bg-cyan-800
-        outline-cyan-400
-        dark:outline-cyan-700
-        hover:bg-cyan-400
-        dark:hover:bg-cyan-700
-        focus:bg-cyan-400
-        dark:focus:bg-cyan-700;
+        bg-cyan-200
+        outline-cyan-300 hover:bg-cyan-300 focus-within:bg-cyan-300
+        dark:bg-cyan-800
+        dark:outline-cyan-700 dark:hover:bg-cyan-700 dark:focus-within:bg-cyan-700;
     }
 
+    .button-toggle-base {
+        @apply
+        px-2 sm:px-3 md:px-5
+        border border-orange-700
+        dark:border-orange-400;
+    }
+
+    .button-toggle-checked {
+        @apply button button-toggle-base;
+    }
+
+    .button-toggle-unchecked {
+        @apply button-base button-toggle-base
+        outline-orange-800 hover:bg-orange-50 focus-within:bg-orange-50
+        dark:outline-orange-300 dark:hover:bg-gray-800 dark:focus-within:bg-gray-800;
+    }
 
     /* Override Tailwinds white background, with transparent background, which makes dark mode behave correctly */
     [multiple], [type=date], [type=datetime-local], [type=email], [type=month], [type=number], [type=password], [type=search], [type=tel], [type=text], [type=time], [type=url], [type=week], select, textarea {
